# snow-today-webapp-server

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.ingest  README.md  VERSION.dev.env  VERSION.env  VERSION.latest.env  compose.live.yml  compose.yml  conda-lock.yml  docker-compose.dev.yml  docker-compose.yml  environment-lock.yml  environment.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: container_image.yml  docs.yml  test.yml
data/: regions.json  variables.json
data/regions/: 26000.json  26101.json  26101_hierarchy.json  root.json
data/shapes/: USwest_HUC_10.geojson  USwest_HUC_1002.geojson  USwest_HUC_1003.geojson  USwest_HUC_1004.geojson  USwest_HUC_1005.geojson  USwest_HUC_1006.geojson  USwest_HUC_1007.geojson  USwest_HUC_1008.geojson  USwest_HUC_1009.geojson  USwest_HUC_1010.geojson  USwest_HUC_1011.geojson  USwest_HUC_1012.geojson  USwest_HUC_1013.geojson  USwest_HUC_1014.geojson  USwest_HUC_1015.geojson  USwest_HUC_1016.geojson  USwest_HUC_1017.geojson  USwest_HUC_1018.geojson  USwest_HUC_1019.geojson  USwest_HUC_1020.geojson  USwest_HUC_1021.geojson  USwest_HUC_1022.geojson  USwest_HUC_1023.geojson  USwest_HUC_1024.geojson  USwest_HUC_1025.geojson  USwest_HUC_1026.geojson  USwest_HUC_1027.geojson  USwest_HUC_1028.geojson  USwest_HUC_11.geojson  USwest_HUC_1102.geojson  USwest_HUC_1103.geojson  USwest_HUC_1104.geojson  USwest_HUC_1108.geojson  USwest_HUC_1109.geojson  USwest_HUC_1110.geojson  USwest_HUC_1112.geojson  USwest_HUC_1113.geojson  USwest_HUC_12.geojson  USwest_HUC_1201.geojson  USwest_HUC_1202.geojson  (+86 more)
deploy/: deploy
doc/: TODO.md  _quarto.yml  contributing.md  data.md  development.md  environment.yml  index.md  releasing.md
nginx/: default.conf
schema/: colormapsIndex.json  plotData.json  regionsIndex.json  shapesIndex.json  subRegionCollectionsIndex.json  subRegions.json  subRegionsHierarchy.json  variablesIndex.json
scripts/: cli.py  container_cli.sh  csv_cols_to_json.py  make_cogs.py  make_cogs.sh  make_dynamic_legends.py  make_legends.py  make_plot_json.py  make_plot_json.sh  make_region_shape_geojson.py  make_region_shapes_and_index.py  make_static_legends.py  make_swe_json.py  sync.sh  update_cog_symlinks.sh  validate_cog.py  validate_json.sh
snow_today_webapp_ingest/: cli.py  data_classes.py  ingest_region_metadata.py  logging_.py  make_cogs.py  make_dynamic_legends.py  make_plot_json.py  make_region_shapes_and_index.py  make_static_legends.py  make_swe_json.py  schema.py
static/: README.md  colormaps.json  variables.json
tasks/: __init__.py  env.py  format.py  test.py  util.py
(+129 files in other folders)
